--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
+  "styles": [
+    "src/styles.scss"
+  ],
   "devDependencies": {
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
